@startuml orm_identity_preferences
' run:
' cd docs/diagrams/src
' plantuml -tpng -Ddpi=300 -o ../export orm_identity_preferences.puml

' --- Common style ---
hide circle
skinparam Shadowing false
skinparam RoundCorner 8
skinparam ClassAttributeIconSize 0
skinparam DefaultFontName Arial
skinparam DefaultFontSize 16
skinparam ArrowColor #333333
skinparam LineColor #333333
skinparam PackageBorderColor #333333
skinparam PackageBackgroundColor #FFFFFF
skinparam ClassBorderColor #333333
skinparam ClassBackgroundColor #FFFFFF
skinparam ObjectBorderColor #333333
skinparam ObjectBackgroundColor #FFFFFF
skinparam NoteBackgroundColor #FFFFFF
skinparam NoteBorderColor #333333
skinparam BackgroundColor #FFFFFF

top to bottom direction
skinparam linetype ortho
skinparam ranksep 28
skinparam nodesep 18
skinparam padding 8
skinparam maxMessageSize 40

package "ORM — Identity + Preferences (backend/models/orm/*)" {

  ' -------------------------
  ' Identity / auth (+ onboarding)
  ' -------------------------
  together {
    class Doctor {
      +id : int
      +role : DoctorRole
      +is_active : bool
      +is_head : bool
    }

    class User {
      +id : int
      +email : str
      +role : UserRole
      +password_hash : str
      +doctor_id : int?
      +is_active : bool
    }

    class PasswordResetToken {
      +id : int
      +user_id : int
      +token : str
      +expires_at : datetime
      +created_at : datetime
    }

    class PendingDoctor {
      +id : int
      +first_name : str
      +last_name : str
      +email : str
      +created_at : datetime
    }
  }

  ' -------------------------
  ' Preferences triad (reduced fields for readability)
  ' -------------------------
  together {
    class PreferenceWorking {
      +id : int
      +doctor_id : int
      +year : int
      +month : int
      +lock_version : int
      --
      +unavailable_onsite_days : JSON?
      +unavailable_oncall_days : JSON?
      +preferred_onsite_days : JSON?
      +preferred_oncall_days : JSON?
    }

    class PreferenceVersion {
      +id : int
      +doctor_id : int
      +year : int
      +month : int
      +kind : str
      +payload : JSON
      +created_at : datetime
      +created_by_role : str
      +note : str?
    }

    class PreferencePointer {
      +id : int
      +doctor_id : int
      +year : int
      +month : int
      +current_version_id : int?
      +submitted_at : datetime?
      +submitted_by_role : str?
    }

    class PreferenceDeadline {
      +id : int
      +year : int
      +month : int
      +deadline_utc : datetime
      +org_timezone : str
    }
  }
}

' =========================
' Relationships (FK / intent)
' =========================

' User <-> Doctor link (1:1 via unique doctor_id)
User "0..1" --> "1" Doctor : doctor_id (unique)

' Reset token belongs to user (1 active per user enforced by uq)
PasswordResetToken "0..1" --> "1" User : user_id (unique)

' Preferences belong to doctor
PreferenceWorking "*" --> "1" Doctor : doctor_id
PreferenceVersion "*" --> "1" Doctor : doctor_id
PreferencePointer "*" --> "1" Doctor : doctor_id
PreferencePointer "0..1" --> "1" PreferenceVersion : current_version_id

' PendingDoctor has NO FK in code; shown as workflow intent only
PendingDoctor ..> Doctor : "approval -> creates"
PendingDoctor ..> User   : "approval -> creates"

' =========================
' Layout helpers (hidden links)
' =========================

' Keep identity column compact
PendingDoctor -[hidden]down-> User
User -[hidden]down-> Doctor
PasswordResetToken -[hidden]down-> User

' Keep preferences column compact
PreferenceDeadline -[hidden]down-> PreferencePointer
PreferencePointer  -[hidden]down-> PreferenceVersion
PreferenceVersion  -[hidden]down-> PreferenceWorking
PreferenceWorking  -[hidden]down-> Doctor

@enduml
